--- a/ipsec.conf
+++ b/ipsec.conf
@@ -1,4 +1,5 @@
 # /etc/ipsec.conf
+
 config setup
     charondebug="ike 2, cfg 2, knl 2, net 2"
     uniqueids=no
@@ -8,11 +9,12 @@ conn myvpn
     dpdaction=clear
     dpddelay=300s
     rekey=no
+    left=%defaultroute
     leftsourceip=%config
     leftauth=eap-mschapv2
     eap_identity="vpn"
-    right=public-vpn-259.opengw.net
-    rightid=%any
+    right=public-vpn-100.opengw.net
+    rightid=public-vpn-100.opengw.net
     rightsubnet=0.0.0.0/0
     rightauth=psk
     auto=start
