--- a/ipsec.conf
+++ b/ipsec.conf
@@ -1,8 +1,9 @@
 # /etc/ipsec.conf
 
 config setup
-    charondebug="ike 2, cfg 2, knl 2, net 2"
+    charondebug="ike 2, knl 2, cfg 2, net 2, esp 2, dmn 2,  mgr 2"
     uniqueids=no
+
 
 conn myvpn
     keyexchange=ikev2
